--- a/package.json
+++ b/package.json
@@ -4,29 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build", 
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.7.1",
-    "bcryptjs": "^2.4.3",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.303.0",
     "next": "14.0.4",
-    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.8.0",
-    "tailwind-merge": "^2.2.0"
+    "lucide-react": "^0.303.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
@@ -34,9 +22,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
-    "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0",
-    "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   }
 }
